--- a/src/main/resources/templates/greeting.mustache
+++ b/src/main/resources/templates/greeting.mustache
@@ -4,6 +4,7 @@
     <title>Getting Started: Serving Web Content</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<div>Hello, {{name}}</div>
+<div>Hello, User</div>
+<a href="/main">Main page</a>
 </body>
 </html>
