--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -2,7 +2,14 @@
 <html>
     <body>
     <div>
+        <form action="/logout" method="post">
+            <input type="hidden" name="_csrf" value="{{_csrf.token}}">
+            <input type="submit" value="Sign Out"/>
+        </form>
+    </div>
+    <div>
         <form method="post">
+            <input type="hidden" name="_csrf" value="{{_csrf.token}}">
             <input type="text" name="text" placeholder="Введите текст">
             <input type="text" name="tag" placeholder="Тэг">
             <button type="submit">Добавить</button>
@@ -10,6 +17,7 @@
     </div>
     <div>Список сообщений</div>
     <form method="post" action="filter">
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}">
         <input type="text" name="filter">
         <button type="submit">Найти</button>
     </form>
